--- a/package.json
+++ b/package.json
@@ -11,22 +11,23 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"bcrypt": "^5.1.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
+		"google-auth-library": "^9.10.0",
+		"googleapis": "^140.0.0",
 		"jsonwebtoken": "^9.0.2",
-		"mongoose": "^8.3.4",
+		"mongoose": "^8.4.1",
+		"multer": "^1.4.5-lts.1",
 		"path-to-regexp": "^6.2.2",
-		"uuid": "^9.0.1",
-		"zod": "^3.23.3"
+		"xlsx": "^0.18.5",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
-		"@types/bcrypt": "^5.0.2",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
 		"@types/jsonwebtoken": "^9.0.6",
-		"@types/node": "^20.12.8",
-		"@types/uuid": "^9.0.8"
+		"@types/multer": "^1.4.11",
+		"@types/node": "^20.12.8"
 	}
 }
