--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"mongoose": "^8.4.1",
 		"multer": "^1.4.5-lts.1",
 		"path-to-regexp": "^6.2.2",
+		"twilio": "^5.1.1",
 		"xlsx": "^0.18.5",
 		"zod": "^3.23.8"
 	},
