--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@types/express": "^4.17.21",
 		"@types/jsonwebtoken": "^9.0.6",
 		"@types/multer": "^1.4.11",
-		"@types/node": "^20.12.8"
+		"@types/node": "^20.12.8",
+		"typescript": "^5.5.3"
 	}
 }
